[build-system]
requires = ["setuptools>=61.0","requests"]
build-backend = "setuptools.build_meta"

[project]
name = "deeplearningtracker_leandervandenheuvel"
version = "0.0.1"
authors = [
  { name="Leander van den Heuvel", email="leander.vandenheuvel@gmail.com" },
]
description = "A small package for uploading Deep Learning metrics to Home Assistant"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/LeanderHeuvel/HomeAsssistant-DeepLearning-Tracker"
"Bug Tracker" = "https://github.com/LeanderHeuvel/HomeAsssistant-DeepLearning-Tracker/issues"